[tool.poetry]
name = "hola-user-ms"
version = "0.0.1"
description = "Hola api user microservice"
authors = ["Raphael Golubev <raphael.golubev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
