[tool.poetry]
name = "hola-user-ms"
version = "0.0.1"
description = "Hola api user microservice"
authors = ["Raphael Golubev <raphael.golubev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic-settings = "^2.5.2"
databases = {extras = ["asyncpg"], version = "^0.9.0"}
pydantic = {extras = ["email"], version = "^2.9.2"}
loguru = "^0.7.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jinja2 = "^3.1.4"
redis = "^5.1.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
